# simpukka

./: LICENSE  pyproject.toml  readme.MD  requirements.txt  setup.py
src/simpukka/: config.py  config_utils.py  filters.py  initialise.py  plugins.py  template.py  utils.py
tests/: test_filter.py  test_simpukka.py
