[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simpukka"
version = "0.0.9"
readme = "readme.md"
dependencies = [
    "python-dotenv",
    "requests",
    "psutil",
    "urlextract",
    "python-dateutil",
    "python-logging-loki",
    'ray["default"]',
]

