[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simpukka"
version = "0.0.12"
readme = "readme.md"
dependencies = [
    "python-dotenv",
    "urlextract",
    "ray[default]",
    "pydantic==1.10.9",
    "jinja2",
    "attrs",
    "sshtunnel"
]

